# 591-rent-helper-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
.serena/: project.yml
config/: settings.py
docs/: ADDING_A_SOURCE.md  API.md  OPTIONS.md  TELEGRAM_BINDING.md
migrations/: 002_user_providers.sql  003_instant_notify_index.sql  004_floor_redesign.sql  005_rename_features_to_other.sql  006_cleanup_columns.sql  007_drop_floor_range_old.sql  008_bathroom_to_integer.sql  009_crawler_runs_cleanup.sql  20260113001_alter_surrounding_distance.sql  20260116001_add_has_detail_column.sql  20260211001_notification_logs.sql  20260211002_broadcast_in_crawler_runs.sql  20260609001_objects_multisource.sql  20260610_subscription_disabled_sources.sql  init.sql
scripts/: test_detail_bs4.py  test_detail_playwright.py  test_list_bs4.py  test_list_playwright.py
src/api/: dependencies.py  main.py
src/api/routes/: __init__.py  auth.py  bindings.py  checker.py  health.py  sources.py  subscriptions.py  telegram.py  users.py
src/channels/: __init__.py  base.py
src/channels/commands/: __init__.py  base.py  bind.py  command.py  help.py  list.py  manage.py  notify.py  registry.py  start.py  status.py
src/channels/telegram/: __init__.py  bot.py  formatter.py  handler.py  menus.py
src/connections/: postgres.py  redis.py
src/crawler/: __init__.py  base.py  combiner.py  contract.py  detail_fetcher.py  detail_fetcher_bs4.py  detail_fetcher_playwright.py  list_fetcher.py  list_fetcher_bs4.py  list_fetcher_playwright.py  object_detail.py  registry.py  rent591.py  types.py  workers.py
src/crawler/extractors/: __init__.py  combiner.py  detail_extractor.py  detail_extractor_nuxt.py  detail_extractor_playwright.py  list_extractor.py  list_extractor_nuxt.py  list_extractor_playwright.py  types.py
src/crawler/sources/: __init__.py
src/crawler/sources/x591/: __init__.py  combiner.py  detail_fetcher.py  detail_fetcher_bs4.py  detail_fetcher_playwright.py  list_fetcher.py  list_fetcher_bs4.py  list_fetcher_playwright.py  raw_types.py  source.py  transformers.py
src/jobs/: __init__.py  broadcaster.py  checker.py  instant_notify.py  parser.py  pre_filter.py  scheduler.py
src/matching/: __init__.py  matcher.py  pre_filter.py
src/middleware/: __init__.py  cors.py  logging.py
src/modules/: __init__.py
src/modules/bindings/: __init__.py  models.py  redis_sync.py  repository.py
src/modules/objects/: __init__.py  models.py  repository.py
src/modules/providers/: __init__.py  models.py  redis_sync.py  repository.py  telegram_auth.py
src/modules/subscriptions/: __init__.py  models.py  repository.py  service.py
src/modules/users/: __init__.py  models.py  repository.py
src/utils/: __init__.py  mappings.py  transformers.py
src/utils/mappings/: __init__.py  fitment.py  kind.py  options.py  other.py  shape.py
src/utils/mappings/sections/: __init__.py  new_taipei.py  taipei.py
src/utils/parsers/: __init__.py  detail.py  fitment.py  floor.py  layout.py  rule.py  shape.py
src/utils/sections/: __init__.py
tests/: conftest.py
tests/fixtures/: checker.py  extractors.py  formatter.py
tests/unit/api/: test_source_routes.py
tests/unit/channels/: test_callback_handler.py  test_formatter.py  test_menus.py
tests/unit/crawler/: __init__.py  test_extractors.py  test_pipeline_golden.py  test_registry.py  test_x591_source.py
tests/unit/jobs/: test_checker.py  test_checker_orchestration.py  test_instant_notify_orchestration.py
tests/unit/matching/: test_matcher.py  test_pre_filter.py
tests/unit/modules/: test_subscriptions_service.py
tests/unit/utils/: test_parsers.py  test_transformers.py
