[project]
name = "591-crawler"
version = "0.1.0"
description = "591 rental object crawler with notification system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Browser Automation
    "playwright>=1.40.0",
    # HTTP Client
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # PostgreSQL
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    # Redis
    "redis>=5.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Telegram Bot
    "python-telegram-bot>=21.0",
    # Configuration
    "pydantic-settings>=2.0.0",
    # Logging
    "loguru>=0.7.0",
    # Environment
    "python-dotenv>=1.0.0",
    "email-validator>=2.3.0",
    "pyjwt>=2.10.1",
]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    # Linting & Formatting
    "ruff>=0.2.0",
    # Type checking
    "mypy>=1.8.0",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Disable overly strict checks
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
# Keep useful checks
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true

# Per-module overrides for Playwright/BS4 typing quirks
[[tool.mypy.overrides]]
module = [
    "src.crawler.list_fetcher_playwright",
    "src.crawler.detail_fetcher_playwright",
    "src.crawler.list_fetcher_bs4",
    "src.crawler.detail_fetcher_bs4",
    "src.crawler.list_fetcher",
    "src.crawler.detail_fetcher",
]
disable_error_code = ["union-attr", "arg-type", "assignment", "attr-defined", "typeddict-item", "operator", "misc"]

# Redis async/sync typing quirks
[[tool.mypy.overrides]]
module = "src.connections.redis"
disable_error_code = ["misc"]

# Jobs module - complex async patterns
[[tool.mypy.overrides]]
module = [
    "src.jobs.instant_notify",
    "src.jobs.broadcaster",
    "src.jobs.checker",
]
disable_error_code = ["union-attr", "arg-type", "assignment", "no-redef"]

# Signal handler and decorator patterns
[[tool.mypy.overrides]]
module = [
    "src.api.main",
    "src.modules.subscriptions.models",
    "src.channels.telegram.handler",
]
disable_error_code = ["assignment", "prop-decorator", "arg-type"]
